# thinning-for-point-cloud

./: CMakeLists.txt
include/: thinning.h
src/: thinning.cpp
